// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@example tests > AS_BOOLEAN > AS_BOOLEAN("0") 1`] = `
"
┌───┬───────┐
│   │ A     │
├───┼───────┤
│ 1 │ FALSE │
└───┴───────┘
"
`;

exports[`@example tests > AS_BOOLEAN > AS_BOOLEAN("123") 1`] = `
"
┌───┬──────┐
│   │ A    │
├───┼──────┤
│ 1 │ TRUE │
└───┴──────┘
"
`;

exports[`@example tests > AS_BOOLEAN > AS_BOOLEAN(0) 1`] = `
"
┌───┬───────┐
│   │ A     │
├───┼───────┤
│ 1 │ FALSE │
└───┴───────┘
"
`;

exports[`@example tests > AS_BOOLEAN > AS_BOOLEAN(1) 1`] = `
"
┌───┬──────┐
│   │ A    │
├───┼──────┤
│ 1 │ TRUE │
└───┴──────┘
"
`;

exports[`@example tests > AS_BOOLEAN > AS_BOOLEAN(FALSE()) 1`] = `
"
┌───┬───────┐
│   │ A     │
├───┼───────┤
│ 1 │ FALSE │
└───┴───────┘
"
`;

exports[`@example tests > AS_BOOLEAN > AS_BOOLEAN(NOW()) 1`] = `
"
┌───┬──────┐
│   │ A    │
├───┼──────┤
│ 1 │ TRUE │
└───┴──────┘
"
`;

exports[`@example tests > AS_BOOLEAN > AS_BOOLEAN(TRUE()) 1`] = `
"
┌───┬──────┐
│   │ A    │
├───┼──────┤
│ 1 │ TRUE │
└───┴──────┘
"
`;

exports[`@example tests > AS_BOOLEANS(0, 1, "123", "0", TRUE(), FALSE(), NOW()) 1`] = `
"
┌───┬───────┬──────┬──────┬───────┬──────┬───────┬──────┐
│   │ A     │ B    │ C    │ D     │ E    │ F     │ G    │
├───┼───────┼──────┼──────┼───────┼──────┼───────┼──────┤
│ 1 │ FALSE │ TRUE │ TRUE │ FALSE │ TRUE │ FALSE │ TRUE │
└───┴───────┴──────┴──────┴───────┴──────┴───────┴──────┘
"
`;

exports[`@example tests > AS_CHAR > AS_CHAR(65) 1`] = `
"
┌───┬─────┐
│   │ A   │
├───┼─────┤
│ 1 │ "A" │
└───┴─────┘
"
`;

exports[`@example tests > AS_CHAR > AS_CHAR(97) 1`] = `
"
┌───┬─────┐
│   │ A   │
├───┼─────┤
│ 1 │ "a" │
└───┴─────┘
"
`;

exports[`@example tests > AS_NUMBER > AS_NUMBER("123") 1`] = `
"
┌───┬─────┐
│   │ A   │
├───┼─────┤
│ 1 │ 123 │
└───┴─────┘
"
`;

exports[`@example tests > AS_NUMBER > AS_NUMBER("million") 1`] = `
"
┌───┬───────┐
│   │ A     │
├───┼───────┤
│ 1 │ Error │
└───┴───────┘

Errors:

· A1: AS_NUMBER() expects a number, got million
"
`;

exports[`@example tests > AS_NUMBER > AS_NUMBER(1) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 1 │
└───┴───┘
"
`;

exports[`@example tests > AS_NUMBER > AS_NUMBER(FALSE()) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 0 │
└───┴───┘
"
`;

exports[`@example tests > AS_NUMBER > AS_NUMBER(NOW()) 1`] = `
"
┌───┬───────────────┐
│   │ A             │
├───┼───────────────┤
│ 1 │ 1358752520000 │
└───┴───────────────┘
"
`;

exports[`@example tests > AS_NUMBER > AS_NUMBER(TRUE()) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 1 │
└───┴───┘
"
`;

exports[`@example tests > AS_NUMBERS(1, "123", "million", TRUE(), FALSE(), NOW()) 1`] = `
"
┌───┬───┬─────┬───────┬───┬───┬───────────────┐
│   │ A │ B   │ C     │ D │ E │ F             │
├───┼───┼─────┼───────┼───┼───┼───────────────┤
│ 1 │ 1 │ 123 │ Error │ 1 │ 0 │ 1358752520000 │
└───┴───┴─────┴───────┴───┴───┴───────────────┘

Errors:

· C1: AS_NUMBER() expects a number, got million
"
`;

exports[`@example tests > AS_STRING > AS_STRING("123") 1`] = `
"
┌───┬───────┐
│   │ A     │
├───┼───────┤
│ 1 │ "123" │
└───┴───────┘
"
`;

exports[`@example tests > AS_STRING > AS_STRING(1) 1`] = `
"
┌───┬─────┐
│   │ A   │
├───┼─────┤
│ 1 │ "1" │
└───┴─────┘
"
`;

exports[`@example tests > AS_STRING > AS_STRING(FALSE()) 1`] = `
"
┌───┬─────────┐
│   │ A       │
├───┼─────────┤
│ 1 │ "FALSE" │
└───┴─────────┘
"
`;

exports[`@example tests > AS_STRING > AS_STRING(NOW()) 1`] = `
"
┌───┬───────────────────────┐
│   │ A                     │
├───┼───────────────────────┤
│ 1 │ "2013-01-21 08:15:20" │
└───┴───────────────────────┘
"
`;

exports[`@example tests > AS_STRING > AS_STRING(TIME()) 1`] = `
"
┌───┬────────────┐
│   │ A          │
├───┼────────────┤
│ 1 │ "08:15:20" │
└───┴────────────┘
"
`;

exports[`@example tests > AS_STRING > AS_STRING(TRUE()) 1`] = `
"
┌───┬────────┐
│   │ A      │
├───┼────────┤
│ 1 │ "TRUE" │
└───┴────────┘
"
`;

exports[`@example tests > AS_STRINGS(1, "123", TRUE(), FALSE(), NOW(), TIME()) 1`] = `
"
┌───┬─────┬───────┬────────┬─────────┬───────────────────────┬────────────┐
│   │ A   │ B     │ C      │ D       │ E                     │ F          │
├───┼─────┼───────┼────────┼─────────┼───────────────────────┼────────────┤
│ 1 │ "1" │ "123" │ "TRUE" │ "FALSE" │ "2013-01-21 08:15:20" │ "08:15:20" │
└───┴─────┴───────┴────────┴─────────┴───────────────────────┴────────────┘
"
`;

exports[`@example tests > TYPE > TYPE("hello") 1`] = `
"
┌───┬──────────┐
│   │ A        │
├───┼──────────┤
│ 1 │ "string" │
└───┴──────────┘
"
`;

exports[`@example tests > TYPE > TYPE(1) 1`] = `
"
┌───┬──────────┐
│   │ A        │
├───┼──────────┤
│ 1 │ "number" │
└───┴──────────┘
"
`;

exports[`@example tests > TYPE > TYPE(B1) 1`] = `
"
┌───┬─────────┐
│   │ A       │
├───┼─────────┤
│ 1 │ "empty" │
└───┴─────────┘
"
`;

exports[`@example tests > TYPE > TYPE(NOW()) 1`] = `
"
┌───┬────────────┐
│   │ A          │
├───┼────────────┤
│ 1 │ "datetime" │
└───┴────────────┘
"
`;

exports[`@example tests > TYPE > TYPE(TRUE()) 1`] = `
"
┌───┬───────────┐
│   │ A         │
├───┼───────────┤
│ 1 │ "boolean" │
└───┴───────────┘
"
`;

exports[`@example tests > TYPE > TYPE(UNKNOWN_FUNCTION()) 1`] = `
"
┌───┬─────────┐
│   │ A       │
├───┼─────────┤
│ 1 │ "error" │
└───┴─────────┘
"
`;
